# bag-of-visual-words

./: .gitignore  CLAUDE.md  README.md  index.py  push.sh  push_test.sh  pyproject.toml  query.py  requirements.txt
src/: __init__.py  database.py  features.py  tfidf.py  utils.py  vocabulary.py
tests/: __init__.py  conftest.py  test_database.py  test_features.py  test_tfidf.py  test_utils.py  test_vocabulary.py
