[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bows"
version = "0.1.0"
description = "Bag of Visual Words Image Retrieval System"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "opencv-contrib-python>=4.5.0",
    "scikit-learn>=1.0.0",
    "numpy>=1.20.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
